[package]
name = "hibrido"
version = "0.1.0"
authors = ["Tiago Lam <tiagolam@gmail.com>"]

[[bin]]
name = "hibrido"
path = "src/main.rs"

[dependencies]
log = "0.3.6"
byteorder = "0.5.3"
lazy_static = "0.2.1"
nickel = "0.9.0"
rir = { path = "../rir" }
opus = "0.2.0"
rustc-serialize = "0.3.22"
hyper = "0.10.4"

[dependencies.log4rs]
version = "0.4.8"
features = ["yaml"]
